# mpv_audio_kit

./: .fvmrc  .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  build.gradle.kts
android/src/test/kotlin/com/alesdrnz/mpv_audio_kit/: MpvAudioKitPluginTest.kt
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/lib/screens/player/: playback_tab.dart
example/ohos/: oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/src/main/resources/en_US/element/: string.json
example/ohos/entry/src/main/resources/zh_CN/element/: string.json
example/test/: widget_test.dart
example/windows/flutter/: generated_plugins.cmake
ios/: mpv_audio_kit.podspec
ios/Classes/: MpvAudioKitPlugin.swift
lib/: mpv_audio_kit.dart  mpv_audio_kit_method_channel.dart  mpv_audio_kit_platform_interface.dart
lib/src/: event_isolate.dart  mpv_audio_kit.dart  mpv_bindings.dart  player.dart
lib/src/models/: mpv_prefetch_state.dart  player_stream.dart
lib/src/player/: player_property_registry.part.dart
linux/: CMakeLists.txt  mpv_audio_kit_plugin_private.h
linux/test/: mpv_audio_kit_plugin_test.cc
macos/: mpv_audio_kit.podspec
macos/Classes/: MpvAudioKitPlugin.swift
ohos/: BUILD_NATIVE_LIBS.md  build-profile.json5  build_ohos_libmpv.sh  hvigorfile.ts  index.ets  oh-package.json5
ohos/src/main/: module.json5
ohos/src/main/ets/components/plugin/: MpvAudioKitPlugin.ets
windows/: CMakeLists.txt
windows/test/: mpv_audio_kit_plugin_test.cpp
